Bug 147203 - drag and drop between AutoText categories does not work on Writer
Summary: drag and drop between AutoText categories does not work on Writer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoText Drag-and-Drop
  Show dependency treegraph
 
Reported: 2022-02-04 19:19 UTC by Marcin
Modified: 2022-12-01 17:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcin 2022-02-04 19:19:07 UTC
Description:
In version 4 or 5 drag and drop between AutoText categories work well. But from version 6 and now 7 if you have few category you can't change Autotext to outher category by drag and drop. Onyl delete form one category and create in another category

Actual Results:
Drag and Drop does not work

Expected Results:
AutoText work like in version 4 Libre Writer


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
.
Comment 1 Roman Kuznetsov 2022-11-27 19:01:41 UTC
Confirm the problem in

Version: 6.0.0.3
Build ID: 64a0f66915f38c6217de274f0aa8e15618924765
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: ru-RU (ru_RU); Calc: CL

but not in

Версия: 5.4.0.3
ID сборки: 7556cbc6811c9d992f4064ab9287069087d7f62c
Потоков ЦП: 4; ОС:Windows 6.2; Отрисовка ИП: GL; 
Локаль: ru-RU (ru_RU); Calc: group

regression

Marcin, please never confirm your own bug reports yourself.
Comment 2 raal 2022-11-27 20:27:33 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara; Could you possibly take a look at this one?
Thanks
 aac54a91708b8eaa0fab21b5bcea480fbceda999 is the first bad commit
commit aac54a91708b8eaa0fab21b5bcea480fbceda999
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri May 31 21:12:43 2019 +0200

    source 4830a1bae89a8ed60696503e315ffd42c70dff74

https://git.libreoffice.org/core/+/4830a1bae89a8ed60696503e315ffd42c70dff74
Comment 3 Commit Notification 2022-11-28 16:28:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/61f42c31b02c569ad22cad5e71b20cb0df8fd1f8

Resolves: tdf#147203 allow dnd between autotext categories

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2022-11-28 16:29:32 UTC
seems good in trunk now, backport to 7-4 in gerrit
Comment 5 Stéphane Guillou (stragu) 2022-12-01 17:29:31 UTC
Reproduced in:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Verified as fixed in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1a5d548b96d86ad7ca04c2b23dc18517a538a998
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

(Although the highlight seems to show it will be placed at that position, but it jumps to the topmost position in the category)
Comment 6 Stéphane Guillou (stragu) 2022-12-01 17:41:15 UTC
Also verified on Windows:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: bfe33d42a2381bce194cc6fe15b830902f7c8443
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded