Resolves: tdf#147203 allow dnd between autotext categories

restores various methods removed as unused since original
regression at

commit 4830a1bae89a8ed60696503e315ffd42c70dff74
Date:   Thu May 30 16:12:23 2019 +0100

    weld SwGlossaryDlg

Change-Id: I5c6186b9f45f3c0957926de2861eb6bc76dda73d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143363
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>